--- a/Breekly-FE/src/app/home/home.component.html
+++ b/Breekly-FE/src/app/home/home.component.html
@@ -1,41 +1,12 @@
   <div class="container">
     <div class="row">
-      <div class="col-sm">
+      <div class="col-sm" *ngFor="let product of homeProducts">
         <div class="card" style="width: 18rem;">
             <div class="card-body">
-              <h5 class="card-title">Card title <span class="badge bg-secondary">New</span></h5>
-              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
-            </div>
-          </div>
-      </div>
-      <div class="col-sm">
-        <div class="card" style="width: 18rem;">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
-            </div>
-          </div>
-      </div>
-      <div class="col-sm">
-        <div class="card" style="width: 18rem;">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
+              <h5 class="card-title" [routerLink] = "['product', product._id]">{{product.name}} <span class="badge bg-secondary">New</span></h5>
+              <h6 class="card-subtitle mb-2 text-muted">Top product</h6>
+              <p class="card-text">{{product.description}}</p>
+              <p class="card-text">{{product.price | currency}}</p>
             </div>
           </div>
       </div>
