--- a/Breekly-FE/src/app/navbar/navbar.component.html
+++ b/Breekly-FE/src/app/navbar/navbar.component.html
@@ -1,13 +1,13 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Breekly</a>
+      <a class="navbar-brand" [routerLink] = "['']">Breekly</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" [routerLink] = "['']">Home</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -21,10 +21,13 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="account">Account</a>
+            <a class="nav-link" [routerLink] = "['account']">Account</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink] = "['cart']">Cart</a>
           </li>
           <!-- <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            <a class="nav-link" [routerLink] = "['product', '6086b827a6b71f406526d7d5']">Best Product</a>
           </li> -->
         </ul>
         <form class="d-flex">
