Implement subscription logic + FE

--- a/Breekly-FE/src/app/account/account.component.html
+++ b/Breekly-FE/src/app/account/account.component.html
@@ -21,7 +21,7 @@
                 <h6 class="card-subtitle mb-2 text-muted"></h6>
                 <p class="card-text">Nume: {{userData.firstName}}</p>
                 <p class="card-text">Prenume: {{userData.lastName}}</p>
-                <p class="card-text">Telefon: 0722747426</p>
+                <p class="card-text">Subscriptions: {{subscriptions}}</p>
                 <div class="account-card-footer">
                     <button class="btn footer-btn">vezi lista comenzi</button>
                 </div>
