--- a/Breekly-FE/src/app/cart/cart.component.css
+++ b/Breekly-FE/src/app/cart/cart.component.css
@@ -1,3 +1,16 @@
 .next-step {
     float: right
 }
+
+.total {
+    border-top: 2px solid black;
+}
+
+.quantity-field {
+    display: flex
+}
+
+.increase-qty:hover,
+ .decrease-qty:hover {
+    cursor: pointer;
+}
