--- a/Breekly-FE/src/app/shipping-info/shipping-info.component.html
+++ b/Breekly-FE/src/app/shipping-info/shipping-info.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" *ngIf="!loader">
     <h2>Billing information</h2>
     <form class="billing-form" [formGroup]="billingForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
@@ -19,4 +19,7 @@
         </div>
         <button type="submit" class="btn btn-primary">Send Subscription</button>
     </form>
+</div>
+<div class="container">
+    <mat-spinner *ngIf="loader"></mat-spinner>
 </div>
