Split subscription based on unique subscription for userId, productId, qty, frequency to prevent spam (same subscription many times instead of editing the one existing)

--- a/Breekly-FE/src/app/cart/cart.component.html
+++ b/Breekly-FE/src/app/cart/cart.component.html
@@ -4,7 +4,7 @@
     <thead>
       <tr>
         <th scope="col">Product</th>
-        <th scope="col">Price per item</th>
+        <th scope="col">Unit Price</th>
         <th scope="col">Quantity</th>
         <th scope="col">Price</th>
         <th scope="col">Action</th>
