--- a/Breekly-FE/src/app/shipping-info/shipping-info.component.html
+++ b/Breekly-FE/src/app/shipping-info/shipping-info.component.html
@@ -2,20 +2,20 @@
     <h2>Billing information</h2>
     <form class="billing-form" [formGroup]="billingForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
-          <label for="firstname">First Name</label>
-          <input type="text" class="form-control" id="firstname" aria-describedby="firstname" placeholder="First Name"  formControlName="firstName">
+          <label for="street">street</label>
+          <input type="text" class="form-control" id="street" aria-describedby="street" placeholder="street"  formControlName="street">
         </div>
         <div class="form-group">
-            <label for="lastname">Last Name</label>
-            <input type="text" class="form-control" id="lastname" aria-describedby="lastname" placeholder="Last Name"  formControlName="lastName">
+            <label for="number">number</label>
+            <input type="text" class="form-control" id="number" aria-describedby="number" placeholder="number"  formControlName="number">
         </div>
         <div class="form-group">
-            <label for="street">Street</label>
-            <input type="text" class="form-control" id="street" aria-describedby="street" placeholder="Street"  formControlName="street">
+            <label for="details">details</label>
+            <input type="text" class="form-control" id="details" aria-describedby="details" placeholder="details"  formControlName="details">
         </div>
         <div class="form-group">
-            <label for="phoneNumber">Phone</label>
-            <input type="text" class="form-control" id="phoneNumber" aria-describedby="phoneNumber" placeholder="Phone"  formControlName="phoneNumber">
+            <label for="city">city</label>
+            <input type="text" class="form-control" id="city" aria-describedby="city" placeholder="city"  formControlName="city">
         </div>
         <button type="submit" class="btn btn-primary">Send Subscription</button>
     </form>
