--- a/Breekly-FE/src/app/account/account.component.html
+++ b/Breekly-FE/src/app/account/account.component.html
@@ -1,33 +1,45 @@
 <div class="container" *ngIf="userData">
     <div class="row">
-      <div class="col-sm-6">
-        <div class="card account-card">
-            <div class="card-body">
-              <h5 class="card-title">Datele contului</h5>
-              <h6 class="card-subtitle mb-2 text-muted"></h6>
-              <p class="card-text">Nume: {{userData.firstName}}</p>
-              <p class="card-text">Prenume: {{userData.lastName}}</p>
-              <p class="card-text">Telefon: 0722747426</p>
-              <div class="account-card-footer">
-                <button class="btn footer-btn action" (click)="logout()">exit</button>
-            </div>
-            </div>
-        </div>
-      </div>
-      <div class="col-sm-6">
-        <div class="card account-card">
-            <div class="card-body">
-                <h5 class="card-title">My Activity</h5>
-                <h6 class="card-subtitle mb-2 text-muted"></h6>
-                <p class="card-text">Nume: {{userData.firstName}}</p>
-                <p class="card-text">Prenume: {{userData.lastName}}</p>
-                <p class="card-text">Subscriptions: {{subscriptions}}</p>
-                <div class="account-card-footer">
-                    <button class="btn footer-btn action">your subscriptions</button>
+        <div class="col-sm-6">
+            <div class="card account-card">
+                <div class="card-body">
+                    <div class="user-data">
+                        <div class="avatar"></div>
+                        <div class="data">
+                            <h5 class="card-title">Datele contului</h5>
+                            <h6 class="card-subtitle mb-2 text-muted"></h6>
+                            <p class="card-text"><span class="field-name">Nume:</span><span class="field-value">{{userData.firstName}}&nbsp; {{userData.lastName}}</span></p>
+                            <p class="card-text"><span class="field-name">Email:</span><span class="field-value">{{userData.email}}</span></p>
+                            <p class="card-text"><span class="field-name">Vechime:</span><span class="field-value">1 an</span></p>
+                            <p class="card-text"><span class="field-name">Telefon:</span><span class="field-value">0722747426</span></p>
+                        </div>
+                    </div>
+                    <div class="account-card-footer">
+                        <button class="btn footer-btn action" (click)="logout()">exit</button>
+                    </div>
                 </div>
             </div>
         </div>
-      </div>
+        <div class="col-sm-6">
+            <div class="card account-card">
+                <div class="card-body">
+                    <div class="user-data">
+                        <div class="subscriptions-image"></div>
+                        <div class="data">
+                            <h5 class="card-title">Subscriptii</h5>
+                            <h6 class="card-subtitle mb-2 text-muted"></h6>
+                            <p class="card-text"><span class="field-name">Subscriptii:</span><span class="field-value">{{subscriptions}}</span></p>
+                            <p class="card-text"><span class="field-name">Email:</span><span class="field-value">{{userData.email}}</span></p>
+                            <p class="card-text"><span class="field-name">Vechime:</span><span class="field-value">1 an</span></p>
+                            <p class="card-text"><span class="field-name">Telefon:</span><span class="field-value">0722747426</span></p>
+                        </div>
+                    </div>
+                    <div class="account-card-footer">
+                        <button class="btn footer-btn action">your subscriptions</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="row">
         <div class="col-sm-12">
@@ -39,7 +51,7 @@
                         <p class="card-text addresses-p">{{userData.firstName}}&nbsp;{{userData.lastName}}</p>
                         <p class="card-text addresses-p">0722747426</p>
                         <p class="card-text addresses-p" *ngIf="mainAddress">{{mainAddress.street}}&nbsp;
-                        {{mainAddress.number}}&nbsp; {{mainAddress.details}}</p>
+                            {{mainAddress.number}}&nbsp; {{mainAddress.details}}</p>
                     </div>
                     <div *ngIf="!mainAddress">
                         <h6 class="card-subtitle mb-2 decorate"><small>NO STORED ADDRESSES</small></h6>
@@ -52,5 +64,3 @@
         </div>
     </div>
 </div>
-
-
