--- a/Breekly-FE/src/app/shipping-info/shipping-info.component.html
+++ b/Breekly-FE/src/app/shipping-info/shipping-info.component.html
@@ -17,7 +17,7 @@
             <label for="city">city</label>
             <input type="text" class="form-control" id="city" aria-describedby="city" placeholder="city"  formControlName="city">
         </div>
-        <button type="submit" class="btn btn-primary">Send Subscription</button>
+        <button type="submit" class="btn btn-success">Send Subscription</button>
     </form>
 </div>
 <div class="container">
