BRKL-20 Add payment method in next step

--- a/Breekly-FE/src/app/shipping-info/shipping-info.component.html
+++ b/Breekly-FE/src/app/shipping-info/shipping-info.component.html
@@ -17,6 +17,12 @@
             <label for="city">city</label>
             <input type="text" class="form-control" id="city" aria-describedby="city" placeholder="city"  formControlName="city">
         </div>
+        <div class="form-group">
+            <label for="city">Payment method</label>
+            <select class="form-control">
+                <option value="1">Cash on delivery</option>
+            </select>
+        </div>
         <button type="submit" class="btn btn-success">Send Subscription</button>
     </form>
 </div>
