--- a/Breekly-FE/src/app/shipping-info/shipping-info.component.html
+++ b/Breekly-FE/src/app/shipping-info/shipping-info.component.html
@@ -1,21 +1,33 @@
 <div class="container" *ngIf="!loader">
     <h2>Billing information</h2>
+
     <form class="billing-form" [formGroup]="billingForm" (ngSubmit)="onSubmit()">
-        <div class="form-group">
-          <label for="street">street</label>
-          <input type="text" class="form-control" id="street" aria-describedby="street" placeholder="street"  formControlName="street">
+        <mat-form-field appearance="fill">
+            <mat-label>Select an address</mat-label>
+            <mat-select [(value)]="selected">
+                <mat-option *ngFor="let address of addresses" value="{{address._id}}">{{address.street}}</mat-option>
+                <mat-option value="new">New Address</mat-option>
+            </mat-select>
+        </mat-form-field>
+        <div class="form-group" *ngIf="selected==='new'">
+            <label for="street">street</label>
+            <input type="text" class="form-control" id="street" aria-describedby="street" placeholder="street"
+                formControlName="street">
         </div>
-        <div class="form-group">
+        <div class="form-group" *ngIf="selected==='new'">
             <label for="number">number</label>
-            <input type="text" class="form-control" id="number" aria-describedby="number" placeholder="number"  formControlName="number">
+            <input type="text" class="form-control" id="number" aria-describedby="number" placeholder="number"
+                formControlName="number">
         </div>
-        <div class="form-group">
+        <div class="form-group" *ngIf="selected==='new'">
             <label for="details">details</label>
-            <input type="text" class="form-control" id="details" aria-describedby="details" placeholder="details"  formControlName="details">
+            <input type="text" class="form-control" id="details" aria-describedby="details" placeholder="details"
+                formControlName="details">
         </div>
-        <div class="form-group">
+        <div class="form-group" *ngIf="selected==='new'">
             <label for="city">city</label>
-            <input type="text" class="form-control" id="city" aria-describedby="city" placeholder="city"  formControlName="city">
+            <input type="text" class="form-control" id="city" aria-describedby="city" placeholder="city"
+                formControlName="city">
         </div>
         <div class="form-group">
             <label for="city">Payment method</label>
