--- a/Breekly-FE/src/app/account/account.component.html
+++ b/Breekly-FE/src/app/account/account.component.html
@@ -15,7 +15,7 @@
                         </div>
                     </div>
                     <div class="account-card-footer">
-                        <button class="btn footer-btn action" (click)="logout()">exit</button>
+                        <button class="btn footer-btn action" (click)="logout()">Exit</button>
                     </div>
                 </div>
             </div>
@@ -25,7 +25,7 @@
                 <div class="card-body">
                     <div class="user-data">
                         <div class="subscriptions-image"></div>
-                        <div class="data">
+                        <div class="data-subscriptions">
                             <h5 class="card-title">Subscriptii</h5>
                             <h6 class="card-subtitle mb-2 text-muted"></h6>
                             <p class="card-text"><span class="field-name">Subscriptii:</span><span class="field-value">{{subscriptions}}</span></p>
@@ -35,7 +35,7 @@
                         </div>
                     </div>
                     <div class="account-card-footer">
-                        <button class="btn footer-btn action">your subscriptions</button>
+                        <button class="btn footer-btn action">Your subscriptions</button>
                     </div>
                 </div>
             </div>
@@ -46,7 +46,7 @@
             <div class="card account-card">
                 <div class="card-body">
                     <h5 class="card-title">Adresele mele</h5>
-                    <div *ngIf="mainAddress">
+                    <div class="main-address-container" *ngIf="mainAddress">
                         <h6 class="card-subtitle mb-2 decorate"><small>ADRESA PRINCIPALA</small></h6>
                         <p class="card-text addresses-p">{{userData.firstName}}&nbsp;{{userData.lastName}}</p>
                         <p class="card-text addresses-p">0722747426</p>
@@ -57,7 +57,14 @@
                         <h6 class="card-subtitle mb-2 decorate"><small>NO STORED ADDRESSES</small></h6>
                     </div>
                     <div class="account-card-footer">
-                        <button class="btn footer-btn action">edit</button>
+                        <button class="btn footer-btn action" (click)="toggleShowAddresses()">Manage</button>
+                    </div>
+                    <div *ngIf="showAddresses">
+                        <ul class="list-group addresses">
+                            <li class="each-address list-group-item" *ngFor="let address of addresses">
+                                <button class="btn" mat-button (click)="editAddressDialog(address)">{{address.street}}&nbsp; {{address.number}}&nbsp; {{address.details}}</button>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
