--- a/Breekly-FE/src/app/account/account.component.html
+++ b/Breekly-FE/src/app/account/account.component.html
@@ -6,7 +6,10 @@
                     <div class="user-data">
                         <div class="avatar"></div>
                         <div class="data">
-                            <h5 class="card-title">Datele contului</h5>
+                            <div class="title-container">
+                                <h5 class="card-title">Datele contului</h5>
+                                <mat-icon aria-hidden="false" aria-label="Example home icon">account_circle</mat-icon>
+                            </div>
                             <h6 class="card-subtitle mb-2 text-muted"></h6>
                             <p class="card-text"><span class="field-name">Nume:</span><span class="field-value">{{userData.firstName}}&nbsp; {{userData.lastName}}</span></p>
                             <p class="card-text"><span class="field-name">Email:</span><span class="field-value">{{userData.email}}</span></p>
@@ -15,7 +18,10 @@
                         </div>
                     </div>
                     <div class="account-card-footer">
-                        <button class="btn footer-btn action" (click)="logout()">Exit</button>
+                        
+                        <button class="btn footer-btn action" (click)="logout()">
+                            <mat-icon aria-hidden="false" aria-label="Example home icon">logout</mat-icon>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -26,16 +32,20 @@
                     <div class="user-data">
                         <div class="subscriptions-image"></div>
                         <div class="data-subscriptions">
-                            <h5 class="card-title">Subscriptii</h5>
+                            <div class="title-container">
+                                <h5 class="card-title">Subscriptii</h5><mat-icon aria-hidden="false" aria-label="Example home icon">calendar_today</mat-icon>
+                            </div>
                             <h6 class="card-subtitle mb-2 text-muted"></h6>
-                            <p class="card-text"><span class="field-name">Subscriptii:</span><span class="field-value">{{subscriptions}}</span></p>
+                            <p class="card-text"><span class="field-name">Subscriptii:</span><span *ngIf="subscriptions" class="field-value">{{subscriptions.length}}</span></p>
                             <p class="card-text"><span class="field-name">Email:</span><span class="field-value">{{userData.email}}</span></p>
                             <p class="card-text"><span class="field-name">Vechime:</span><span class="field-value">1 an</span></p>
                             <p class="card-text"><span class="field-name">Telefon:</span><span class="field-value">0722747426</span></p>
                         </div>
                     </div>
                     <div class="account-card-footer">
-                        <button class="btn footer-btn action">Your subscriptions</button>
+                        <button class="btn footer-btn action" (click)="toggleManageSubscriptions()">
+                            <mat-icon aria-hidden="false" aria-label="Example home icon">settings</mat-icon>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -44,8 +54,11 @@
     <div class="row">
         <div class="col-sm-12">
             <div class="card account-card">
-                <div class="card-body">
-                    <h5 class="card-title">Adresele mele</h5>
+                <div class="card-body addresses-body">
+                    <div class="title-container">
+                        <h5 class="card-title">Adresele mele</h5>
+                        <mat-icon aria-hidden="false" aria-label="Example home icon">house</mat-icon>
+                    </div>
                     <div class="main-address-container" *ngIf="mainAddress">
                         <h6 class="card-subtitle mb-2 decorate"><small>ADRESA PRINCIPALA</small></h6>
                         <p class="card-text addresses-p">{{userData.firstName}}&nbsp;{{userData.lastName}}</p>
@@ -57,7 +70,7 @@
                         <h6 class="card-subtitle mb-2 decorate"><small>NO STORED ADDRESSES</small></h6>
                     </div>
                     <div class="account-card-footer">
-                        <button class="btn footer-btn action" (click)="toggleShowAddresses()">Manage</button>
+                        <button class="btn footer-btn action" (click)="toggleShowAddresses()"><mat-icon aria-hidden="false" aria-label="Example home icon">settings</mat-icon></button>
                     </div>
                     <div *ngIf="showAddresses">
                         <ul class="list-group addresses">
