--- a/Breekly-FE/src/app/cart/cart.component.html
+++ b/Breekly-FE/src/app/cart/cart.component.html
@@ -1,6 +1,6 @@
 <div class="container" *ngIf="items else missing">
-  <h3>Shopping Cart</h3>
-  <table class="table table-striped">
+  <h3>Shopping Cart</h3> <mat-icon aria-hidden="false" aria-label="Example home icon">shopping_cart</mat-icon>
+  <table class="table">
     <thead>
       <tr>
         <th scope="col">Product</th>
