BRKLY-17 Order model, api endpoints and frontend

--- a/Breekly-FE/src/app/account/account.component.css
+++ b/Breekly-FE/src/app/account/account.component.css
@@ -56,6 +56,12 @@
     color: gray;
 }
 
+.field-name-order-id {
+    display: inline-block;
+    color: gray;
+    width: 250px;
+}
+
 .field-name,
 .field-value {
     font-size: 15px;
