--- a/Breekly-FE/src/app/account/account.component.html
+++ b/Breekly-FE/src/app/account/account.component.html
@@ -13,7 +13,6 @@
                             <h6 class="card-subtitle mb-2 text-muted"></h6>
                             <p class="card-text"><span class="field-name">Nume:</span><span class="field-value">{{userData.firstName}}&nbsp; {{userData.lastName}}</span></p>
                             <p class="card-text"><span class="field-name">Email:</span><span class="field-value">{{userData.email}}</span></p>
-                            <p class="card-text"><span class="field-name">Vechime:</span><span class="field-value">1 an</span></p>
                             <p class="card-text"><span class="field-name">Telefon:</span><span class="field-value">0722747426</span></p>
                         </div>
                     </div>
@@ -38,7 +37,6 @@
                             <h6 class="card-subtitle mb-2 text-muted"></h6>
                             <p class="card-text"><span class="field-name">Subscriptii:</span><span *ngIf="subscriptions" class="field-value">{{subscriptions.length}}</span></p>
                             <p class="card-text"><span class="field-name">Email:</span><span class="field-value">{{userData.email}}</span></p>
-                            <p class="card-text"><span class="field-name">Vechime:</span><span class="field-value">1 an</span></p>
                             <p class="card-text"><span class="field-name">Telefon:</span><span class="field-value">0722747426</span></p>
                         </div>
                     </div>
@@ -79,6 +77,46 @@
                             </li>
                         </ul>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="card account-card">
+                <div class="card-body addresses-body">
+                    <div class="title-container">
+                        <h5 class="card-title">Comenzile mele</h5>
+                        <mat-icon aria-hidden="false" aria-label="Example home icon">check_circle</mat-icon>
+                    </div>
+                    <ul class="list-group orders">
+                        <li class="each-address list-group-item" *ngFor="let order of orders">
+                            <p class="card-text">
+                                <span class="field-name-order-id">#{{order._id}}</span>
+                                <span class="field-value"></span>
+                            </p>
+                            <p class="card-text">
+                                <span class="field-name">Quantity:</span>
+                                <span class="field-value">{{order.subscriptionId.qty}}</span>
+                            </p>
+                            <p class="card-text">
+                                <span class="field-name">Product:</span>
+                                <span class="field-value">{{order.subscriptionId.productId.name}}</span>
+                            </p>
+                            <p class="card-text">
+                                <span class="field-name">Address:</span>
+                                <span class="field-value">{{order.subscriptionId.addressId.street}}&nbsp;{{order.subscriptionId.addressId.number}}</span>
+                            </p>
+                            <p class="card-text">
+                                <span class="field-name">Status:</span>
+                                <span class="field-value">{{order.status}}</span>
+                            </p>
+                            <p class="card-text">
+                                <span class="field-name">Placed at:</span>
+                                <span class="field-value">{{order.time | date:'dd-MM-yyyy'}}</span>
+                            </p>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
