BRKLY-16 Style homepage and cart

--- a/Breekly-FE/src/app/cart/cart.component.html
+++ b/Breekly-FE/src/app/cart/cart.component.html
@@ -45,6 +45,7 @@
 
 <ng-template #missing>
   <div class="container">
-    <h3>You don't have any items in your shopping cart.</h3>
+      <mat-icon aria-hidden="false" class="heading-l" aria-label="Example home icon">mood_bad</mat-icon>
+    <h3>Nu ai produse in cosul de cumparaturi.</h3>
   </div>
 </ng-template>
