BRKLY-19 Admin section

--- a/Breekly-FE/src/app/navbar/navbar.component.html
+++ b/Breekly-FE/src/app/navbar/navbar.component.html
@@ -9,7 +9,7 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" [routerLink] = "['']">Home</a>
           </li>
-          <li class="nav-item dropdown">
+          <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Products
             </a>
@@ -19,7 +19,7 @@
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Something else here</a></li>
             </ul>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" [routerLink] = "['account']">Account</a>
           </li>
@@ -29,11 +29,11 @@
           <!-- <li class="nav-item">
             <a class="nav-link" [routerLink] = "['product', '6086b827a6b71f406526d7d5']">Best Product</a>
           </li> -->
-        </ul>
-        <form class="d-flex">
+        </ul>        
+        <!-- <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+        </form> -->
       </div>
     </div>
 </nav>
