--- a/Breekly-FE/src/app/manage-subscriptions-dialog/manage-subscriptions-dialog.component.html
+++ b/Breekly-FE/src/app/manage-subscriptions-dialog/manage-subscriptions-dialog.component.html
@@ -1,22 +1,18 @@
 <table class="table" *ngIf="data.subscriptions">
     <thead>
       <tr>
-        <th scope="col">#</th>
-        <th scope="col">Product</th>
-        <th scope="col">Frequency</th>
-        <th scope="col">Quantity</th>
-        <th scope="col">Address</th>
-        <th scope="col">Action</th>
+        <th scope="col">Produs</th>
+        <th scope="col">Buc.</th>
+        <th scope="col">Adresa</th>
+        <th scope="col"></th>
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let subscription of data.subscriptions; let i = index">
-        <th scope="row">{{i + 1}}</th>
+      <tr *ngFor="let subscription of data.subscriptions">
         <td>{{subscription.productId.name}}</td>
-        <td>{{subscription.period}}</td>
         <td>{{subscription.qty}}</td>
         <td>{{subscription.addressId.street}}&nbsp;{{subscription.addressId.number}}</td>
-        <td><button class="btn btn-danger" (click)="removeSubscription(subscription._id)">Remove</button></td>
+        <td><button class="btn" (click)="removeSubscription(subscription._id)">X</button></td>
       </tr>
     </tbody>
   </table>
