BRKLY-30 Add to cart only if product is available

--- a/Breekly-FE/src/app/product/product.component.html
+++ b/Breekly-FE/src/app/product/product.component.html
@@ -15,7 +15,8 @@
                 <div class="card-body">
                     <h5 class="card-title">Actions</h5>
                     <p class="card-text">Description: {{product.description}}</p>
-                    <button class="btn btn-primary" (click)="addToCart(product)">Add to Cart</button>
+                    <p class="card-text" *ngIf="!product.availability">Produs indisponibil</p>
+                    <button *ngIf="product.availability" class="btn btn-primary" (click)="addToCart(product)">Add to Cart</button>
                 </div>
             </div>
         </div>
