--- a/Breekly-FE/src/app/shipping-info/shipping-info.component.html
+++ b/Breekly-FE/src/app/shipping-info/shipping-info.component.html
@@ -34,6 +34,8 @@
             <select class="form-control">
                 <option value="1">Cash on delivery</option>
             </select>
+            <small>*Daca unul din produsele din cos + cantitatea aferenta reprezinta o subscriptie existenta,
+                se vor creea subscriptii doar pentru celelalte produse din cos.</small>
         </div>
         <button type="submit" class="btn btn-success">Send Subscription</button>
     </form>
