--- a/Breekly-FE/src/app/account/account.component.css
+++ b/Breekly-FE/src/app/account/account.component.css
@@ -38,7 +38,7 @@
 }
 
 .avatar {
-    background-image: url("../../assets/profile.jpeg");
+    background-image: url("../../assets/profile.png");
     background-repeat: no-repeat;
     width: 132px;
     height: 132px;
