--- a/Breekly-FE/src/app/home/home.component.html
+++ b/Breekly-FE/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <img
-      src="https://images.unsplash.com/photo-1490818387583-1baba5e638af?ixlib=rb-1.2.1&auto=format&fit=crop&w=1600&h=500&q=60"
+      src="https://via.placeholder.com/2500x950"
       class="img-fluid" alt="Responsive image">
   </div>
   <div class="row">
