--- a/Breekly-FE/src/app/login/login.component.html
+++ b/Breekly-FE/src/app/login/login.component.html
@@ -1,15 +1,60 @@
 <div class="container">
-    <h1>Login</h1>
-    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-        <div class="form-group">
-          <label for="exampleInputEmail1">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email"  formControlName="email">
-          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+  <div class="row justify-content-center">
+    <div>
+      <div class="card centered" *ngIf="showLogin">
+        <div class="card-body">
+          <!-- <h5 class="card-title">Card title</h5>
+          <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="card-link">Card link</a>
+          <a href="#" class="card-link">Another link</a> -->
+          <h1>Login</h1>
+          <form [formGroup]="loginForm" (ngSubmit)="loginOnSubmit()">
+              <div class="form-group">
+                <label for="exampleInputEmail1">Email</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email"  formControlName="email">
+                <small id="emailHelp" class="form-text text-muted">*Emailul folosit la inregistrare</small>
+              </div>
+              <div class="form-group">
+                <label for="exampleInputPassword1">Parola</label>
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password"  formControlName="password">
+              </div>
+              <button type="submit" class="btn btn-primary">Trimite</button>
+              <button type="submit" (click)="toggleForms()" class="btn">Nu ai cont?</button>
+          </form>
         </div>
-        <div class="form-group">
-          <label for="exampleInputPassword1">Password</label>
-          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password"  formControlName="password">
+      </div>
+      <div class="card centered" *ngIf="!showLogin">
+        <div class="card-body">
+          <!-- <h5 class="card-title">Card title</h5>
+          <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="card-link">Card link</a>
+          <a href="#" class="card-link">Another link</a> -->
+          <h1>Creare cont</h1>
+          <form [formGroup]="registerForm" (ngSubmit)="registerOnSubmit()">
+              <div class="form-group">
+                <label for="exampleInputEmail1" matBadge="*" matBadgeOverlap="false" matBadgePosition="before">Email</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email"  formControlName="email">
+                <small id="emailHelp" class="form-text text-muted">*Acest email il vei folosi pentru conectare</small>
+              </div>
+              <div class="form-group">
+                <label for="exampleInputPassword1" matBadge="*" matBadgeOverlap="false" matBadgePosition="before">Parola</label>
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password"  formControlName="password">
+              </div>
+              <div class="form-group">
+                <label for="exampleInputPassword1" matBadge="*" matBadgeOverlap="false" matBadgePosition="before">Prenume</label>
+                <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Ex: Ion"  formControlName="firstName">
+              </div>
+              <div class="form-group">
+                <label for="exampleInputPassword1" matBadge="*" matBadgeOverlap="false" matBadgePosition="before">Nume</label>
+                <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Ex: Popescu"  formControlName="lastName">
+              </div>
+              <button type="submit" class="btn btn-primary">Trimite</button>
+              <button type="submit" (click)="toggleForms()" class="btn">Deja ai un cont?</button>
+          </form>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+      </div>
+    </div>
+  </div>
 </div>
