BRKLY-37 Upload photos + add new product

--- a/Breekly-FE/src/app/product/product.component.html
+++ b/Breekly-FE/src/app/product/product.component.html
@@ -6,7 +6,7 @@
                     <h5 class="card-title">{{product.name}}</h5>
                     <h6 class="card-subtitle mb-2 text-muted"></h6>
                     <p class="card-text">Description: {{product.description}}</p>
-                    <p class="card-text">Price: {{product.price}}</p>
+                    <p class="card-text">Price: {{product.price | currency}}</p>
                 </div>
             </div>
         </div>
