--- a/Breekly-FE/src/app/edit-product-dialog/edit-product-dialog.component.html
+++ b/Breekly-FE/src/app/edit-product-dialog/edit-product-dialog.component.html
@@ -21,9 +21,15 @@
         <input type="checkbox" id="availability" aria-describedby="availability"
             formControlName="availability">
     </div>
+    <div class="form-group">
+      <div *ngFor="let file of files">
+        {{file.name}}
+      </div>
+      <input type="file" multiple id="imagePaths" (change)="handleMediaFiles($event)">
+  </div>
   </form>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button class="btn" mat-button mat-dialog-close>Cancel</button>
-  <button class="btn" mat-button [mat-dialog-close]="editProductForm" cdkFocusInitial>Save</button>
+  <button class="btn" mat-button [mat-dialog-close]="[editProductForm, files]" cdkFocusInitial>Save</button>
 </mat-dialog-actions>
