--- a/Breekly-FE/src/app/product/product.component.html
+++ b/Breekly-FE/src/app/product/product.component.html
@@ -1,32 +1,49 @@
 <div class="container" *ngIf="product">
     <div class="row">
-        <div class="col-sm-9">
+        <div class="col-sm-3">
             <div class="card product-card">
+                <div class="card-body">
+                    <div id="carouselExampleControls" class="carousel slide carousel-dark" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img [src]="mainMedia" class="d-block w-100">
+                            </div>
+                            <div class="carousel-item" *ngFor="let url of productMedia">
+                                <img [src]="url" class="d-block w-100">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-9">
+            <div class="card product-card" style="height: 100%">
                 <div class="card-body">
                     <h5 class="card-title">{{product.name}}</h5>
                     <h6 class="card-subtitle mb-2 text-muted"></h6>
                     <p class="card-text">Description: {{product.description}}</p>
-                    <p class="card-text">Price: {{product.price}}</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-3">
-            <div class="card product-card">
-                <div class="card-body">
-                    <h5 class="card-title">Actions</h5>
-                    <p class="card-text">Description: {{product.description}}</p>
-                    <p class="card-text" *ngIf="!product.availability">Produs indisponibil</p>
-                    <button *ngIf="product.availability" class="btn btn-primary" (click)="addToCart(product)">Add to Cart</button>
+                    <p class="card-text">Price: {{product.price | currency}}</p>
                 </div>
             </div>
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-9">
+        <div class="col-sm-12">
             <div class="card product-card">
-                <div class="card-body">
-                    <h5 class="card-title">Reviews</h5>
-                    <h6 class="card-subtitle mb-2 text-muted"></h6>
+                <div class="card-body" style="text-align: center">
+                    <p class="card-text" *ngIf="!product.availability">Produs indisponibil</p>
+                    <button *ngIf="product.availability" class="btn btn-primary" (click)="addToCart(product)">Add to
+                        Cart</button>
                 </div>
             </div>
         </div>
